parser.out
Created by PLY (http://www.dabeaz.com/ply)

Unused terminals:

    UNKONWN

Grammar

Rule 0     S' -> CompilationUnit
Rule 1     Arguments -> LPAREN RPAREN
Rule 2     Arguments -> LPAREN ArgumentList RPAREN
Rule 3     ArgumentList -> Expression ExpressionComma
Rule 4     Case -> <empty>
Rule 5     Case -> CASE INT COLON Statement
Rule 6     Case -> CASE CHAR COLON Statement
Rule 7     CaseBlock -> LCURLY Case DEFAULT COLON Statement RCURLY
Rule 8     ClassDefinition -> <empty>
Rule 9     ClassDefinition -> CLASS ID LCURLY ClassMemberDefinition RCURLY ClassDefinition
Rule 10    ClassMemberDefinition -> <empty>
Rule 11    ClassMemberDefinition -> MethodDeclaration ClassMemberDefinition
Rule 12    ClassMemberDefinition -> DataMemberDeclaration ClassMemberDefinition
Rule 13    ClassMemberDefinition -> ConstructorDeclaration ClassMemberDefinition
Rule 14    CompilationUnit -> ClassDefinition VOID KXI2023 MAIN LPAREN RPAREN MethodBody
Rule 15    ConstructorDeclaration -> ID MethodSuffix
Rule 16    ContinueStatement -> ELSE Statement
Rule 17    ContinueStatement -> <empty>
Rule 18    DataMemberDeclaration -> Modifier VariableDeclaration
Rule 19    Expression -> Type
Rule 20    Expression -> TRUE
Rule 21    Expression -> FALSE
Rule 22    Expression -> NULL
Rule 23    Expression -> THIS
Rule 24    Expression -> PLUS Expression
Rule 25    Expression -> NOT Expression
Rule 26    Expression -> MINUS Expression
Rule 27    Expression -> Expression Index
Rule 28    Expression -> Expression Arguments
Rule 29    Expression -> Expression EQUAL Expression
Rule 30    Expression -> Expression PLUSEQUAL Expression
Rule 31    Expression -> Expression MINUSEQUAL Expression
Rule 32    Expression -> Expression TIMESEQUAL Expression
Rule 33    Expression -> Expression DIVIDEEQUAL Expression
Rule 34    Expression -> Expression PLUS Expression
Rule 35    Expression -> Expression MINUS Expression
Rule 36    Expression -> Expression TIMES Expression
Rule 37    Expression -> Expression DIVIDE Expression
Rule 38    Expression -> Expression CEQUAL Expression
Rule 39    Expression -> Expression NEQUAL Expression
Rule 40    Expression -> Expression LESS Expression
Rule 41    Expression -> Expression GREATER Expression
Rule 42    Expression -> Expression GREATEQUAL Expression
Rule 43    Expression -> Expression LESSEQUAL Expression
Rule 44    Expression -> Expression AAND Expression
Rule 45    Expression -> Expression OOR Expression
Rule 46    Expression -> LPAREN Expression RPAREN
Rule 47    Expression -> NEW Type Arguments
Rule 48    Expression -> NEW Type Index
Rule 49    Expression -> Expression PERIOD ID
Rule 50    ExpressionComma -> <empty>
Rule 51    ExpressionComma -> COMMA Expression ExpressionComma
Rule 52    Index -> LSQUARE Expression RSQUARE
Rule 53    Initializer -> EQUAL Expression
Rule 54    MethodBody -> LCURLY Statement RCURLY
Rule 55    MethodDeclaration -> Modifier Type LSQUARE RSQUARE ID MethodSuffix
Rule 56    MethodDeclaration -> Modifier Type ID MethodSuffix
Rule 57    MethodSuffix -> LPAREN ParameterList RPAREN MethodBody
Rule 58    MethodSuffix -> LPAREN RPAREN MethodBody
Rule 59    Modifier -> PUBLIC
Rule 60    Modifier -> PRIVATE
Rule 61    Parameter -> Type LSQUARE RSQUARE ID
Rule 62    Parameter -> Type ID
Rule 63    ParameterComma -> <empty>
Rule 64    ParameterComma -> COMMA Parameter ParameterComma
Rule 65    ParameterList -> Parameter ParameterComma
Rule 66    Statement -> <empty>
Rule 67    Statement -> VariableDeclaration Statement
Rule 68    Statement -> RETURN SEMICOLON Statement
Rule 69    Statement -> BREAK SEMICOLON Statement
Rule 70    Statement -> Expression SEMICOLON Statement
Rule 71    Statement -> RETURN Expression SEMICOLON Statement
Rule 72    Statement -> LCURLY Statement RCURLY Statement
Rule 73    Statement -> COUT LEFTSHIFT Expression SEMICOLON Statement
Rule 74    Statement -> CIN RIGHTSHIFT Expression SEMICOLON Statement
Rule 75    Statement -> WHILE LPAREN Expression RPAREN Statement
Rule 76    Statement -> SWITCH LPAREN Expression RPAREN CaseBlock Statement
Rule 77    Statement -> IF LPAREN Expression RPAREN Statement ContinueStatement Statement
Rule 78    Type -> VOID
Rule 79    Type -> INT
Rule 80    Type -> CHAR
Rule 81    Type -> BOOL
Rule 82    Type -> STRING
Rule 83    Type -> ID
Rule 84    VariableDeclaration -> Type ID SEMICOLON
Rule 85    VariableDeclaration -> Type ID Initializer SEMICOLON
Rule 86    VariableDeclaration -> Type LSQUARE RSQUARE ID SEMICOLON
Rule 87    VariableDeclaration -> Type LSQUARE RSQUARE ID Initializer SEMICOLON

Terminals, with rules where they appear

AAND                 : 44
BOOL                 : 81
BREAK                : 69
CASE                 : 5 6
CEQUAL               : 38
CHAR                 : 6 80
CIN                  : 74
CLASS                : 9
COLON                : 5 6 7
COMMA                : 51 64
COUT                 : 73
DEFAULT              : 7
DIVIDE               : 37
DIVIDEEQUAL          : 33
ELSE                 : 16
EQUAL                : 29 53
FALSE                : 21
GREATEQUAL           : 42
GREATER              : 41
ID                   : 9 15 49 55 56 61 62 83 84 85 86 87
IF                   : 77
INT                  : 5 79
KXI2023              : 14
LCURLY               : 7 9 54 72
LEFTSHIFT            : 73
LESS                 : 40
LESSEQUAL            : 43
LPAREN               : 1 2 14 46 57 58 75 76 77
LSQUARE              : 52 55 61 86 87
MAIN                 : 14
MINUS                : 26 35
MINUSEQUAL           : 31
NEQUAL               : 39
NEW                  : 47 48
NOT                  : 25
NULL                 : 22
OOR                  : 45
PERIOD               : 49
PLUS                 : 24 34
PLUSEQUAL            : 30
PRIVATE              : 60
PUBLIC               : 59
RCURLY               : 7 9 54 72
RETURN               : 68 71
RIGHTSHIFT           : 74
RPAREN               : 1 2 14 46 57 58 75 76 77
RSQUARE              : 52 55 61 86 87
SEMICOLON            : 68 69 70 71 73 74 84 85 86 87
STRING               : 82
SWITCH               : 76
THIS                 : 23
TIMES                : 36
TIMESEQUAL           : 32
TRUE                 : 20
UNKONWN              : 
VOID                 : 14 78
WHILE                : 75
error                : 

Nonterminals, with rules where they appear

ArgumentList         : 2
Arguments            : 28 47
Case                 : 7
CaseBlock            : 76
ClassDefinition      : 9 14
ClassMemberDefinition : 9 11 12 13
CompilationUnit      : 0
ConstructorDeclaration : 13
ContinueStatement    : 77
DataMemberDeclaration : 12
Expression           : 3 24 25 26 27 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 49 51 52 53 70 71 73 74 75 76 77
ExpressionComma      : 3 51
Index                : 27 48
Initializer          : 85 87
MethodBody           : 14 57 58
MethodDeclaration    : 11
MethodSuffix         : 15 55 56
Modifier             : 18 55 56
Parameter            : 64 65
ParameterComma       : 64 65
ParameterList        : 57
Statement            : 5 6 7 16 54 67 68 69 70 71 72 72 73 74 75 76 77 77
Type                 : 19 47 48 55 56 61 62 84 85 86 87
VariableDeclaration  : 18 67


state 0

    (0) S' -> . CompilationUnit
    (14) CompilationUnit -> . ClassDefinition VOID KXI2023 MAIN LPAREN RPAREN MethodBody
    (8) ClassDefinition -> .
    (9) ClassDefinition -> . CLASS ID LCURLY ClassMemberDefinition RCURLY ClassDefinition

    VOID            reduce using rule 8 (ClassDefinition -> .)
    CLASS           shift and go to state 3

    CompilationUnit                shift and go to state 1
    ClassDefinition                shift and go to state 2

state 1

    (0) S' -> CompilationUnit .



state 2

    (14) CompilationUnit -> ClassDefinition . VOID KXI2023 MAIN LPAREN RPAREN MethodBody

    VOID            shift and go to state 4


state 3

    (9) ClassDefinition -> CLASS . ID LCURLY ClassMemberDefinition RCURLY ClassDefinition

    ID              shift and go to state 5


state 4

    (14) CompilationUnit -> ClassDefinition VOID . KXI2023 MAIN LPAREN RPAREN MethodBody

    KXI2023         shift and go to state 6


state 5

    (9) ClassDefinition -> CLASS ID . LCURLY ClassMemberDefinition RCURLY ClassDefinition

    LCURLY          shift and go to state 7


state 6

    (14) CompilationUnit -> ClassDefinition VOID KXI2023 . MAIN LPAREN RPAREN MethodBody

    MAIN            shift and go to state 8


state 7

    (9) ClassDefinition -> CLASS ID LCURLY . ClassMemberDefinition RCURLY ClassDefinition
    (10) ClassMemberDefinition -> .
    (11) ClassMemberDefinition -> . MethodDeclaration ClassMemberDefinition
    (12) ClassMemberDefinition -> . DataMemberDeclaration ClassMemberDefinition
    (13) ClassMemberDefinition -> . ConstructorDeclaration ClassMemberDefinition
    (55) MethodDeclaration -> . Modifier Type LSQUARE RSQUARE ID MethodSuffix
    (56) MethodDeclaration -> . Modifier Type ID MethodSuffix
    (18) DataMemberDeclaration -> . Modifier VariableDeclaration
    (15) ConstructorDeclaration -> . ID MethodSuffix
    (59) Modifier -> . PUBLIC
    (60) Modifier -> . PRIVATE

    RCURLY          reduce using rule 10 (ClassMemberDefinition -> .)
    ID              shift and go to state 9
    PUBLIC          shift and go to state 15
    PRIVATE         shift and go to state 16

    ClassMemberDefinition          shift and go to state 10
    MethodDeclaration              shift and go to state 11
    DataMemberDeclaration          shift and go to state 12
    ConstructorDeclaration         shift and go to state 13
    Modifier                       shift and go to state 14

state 8

    (14) CompilationUnit -> ClassDefinition VOID KXI2023 MAIN . LPAREN RPAREN MethodBody

    LPAREN          shift and go to state 17


state 9

    (15) ConstructorDeclaration -> ID . MethodSuffix
    (57) MethodSuffix -> . LPAREN ParameterList RPAREN MethodBody
    (58) MethodSuffix -> . LPAREN RPAREN MethodBody

    LPAREN          shift and go to state 19

    MethodSuffix                   shift and go to state 18

state 10

    (9) ClassDefinition -> CLASS ID LCURLY ClassMemberDefinition . RCURLY ClassDefinition

    RCURLY          shift and go to state 20


state 11

    (11) ClassMemberDefinition -> MethodDeclaration . ClassMemberDefinition
    (10) ClassMemberDefinition -> .
    (11) ClassMemberDefinition -> . MethodDeclaration ClassMemberDefinition
    (12) ClassMemberDefinition -> . DataMemberDeclaration ClassMemberDefinition
    (13) ClassMemberDefinition -> . ConstructorDeclaration ClassMemberDefinition
    (55) MethodDeclaration -> . Modifier Type LSQUARE RSQUARE ID MethodSuffix
    (56) MethodDeclaration -> . Modifier Type ID MethodSuffix
    (18) DataMemberDeclaration -> . Modifier VariableDeclaration
    (15) ConstructorDeclaration -> . ID MethodSuffix
    (59) Modifier -> . PUBLIC
    (60) Modifier -> . PRIVATE

    RCURLY          reduce using rule 10 (ClassMemberDefinition -> .)
    ID              shift and go to state 9
    PUBLIC          shift and go to state 15
    PRIVATE         shift and go to state 16

    MethodDeclaration              shift and go to state 11
    ClassMemberDefinition          shift and go to state 21
    DataMemberDeclaration          shift and go to state 12
    ConstructorDeclaration         shift and go to state 13
    Modifier                       shift and go to state 14

state 12

    (12) ClassMemberDefinition -> DataMemberDeclaration . ClassMemberDefinition
    (10) ClassMemberDefinition -> .
    (11) ClassMemberDefinition -> . MethodDeclaration ClassMemberDefinition
    (12) ClassMemberDefinition -> . DataMemberDeclaration ClassMemberDefinition
    (13) ClassMemberDefinition -> . ConstructorDeclaration ClassMemberDefinition
    (55) MethodDeclaration -> . Modifier Type LSQUARE RSQUARE ID MethodSuffix
    (56) MethodDeclaration -> . Modifier Type ID MethodSuffix
    (18) DataMemberDeclaration -> . Modifier VariableDeclaration
    (15) ConstructorDeclaration -> . ID MethodSuffix
    (59) Modifier -> . PUBLIC
    (60) Modifier -> . PRIVATE

    RCURLY          reduce using rule 10 (ClassMemberDefinition -> .)
    ID              shift and go to state 9
    PUBLIC          shift and go to state 15
    PRIVATE         shift and go to state 16

    DataMemberDeclaration          shift and go to state 12
    ClassMemberDefinition          shift and go to state 22
    MethodDeclaration              shift and go to state 11
    ConstructorDeclaration         shift and go to state 13
    Modifier                       shift and go to state 14

state 13

    (13) ClassMemberDefinition -> ConstructorDeclaration . ClassMemberDefinition
    (10) ClassMemberDefinition -> .
    (11) ClassMemberDefinition -> . MethodDeclaration ClassMemberDefinition
    (12) ClassMemberDefinition -> . DataMemberDeclaration ClassMemberDefinition
    (13) ClassMemberDefinition -> . ConstructorDeclaration ClassMemberDefinition
    (55) MethodDeclaration -> . Modifier Type LSQUARE RSQUARE ID MethodSuffix
    (56) MethodDeclaration -> . Modifier Type ID MethodSuffix
    (18) DataMemberDeclaration -> . Modifier VariableDeclaration
    (15) ConstructorDeclaration -> . ID MethodSuffix
    (59) Modifier -> . PUBLIC
    (60) Modifier -> . PRIVATE

    RCURLY          reduce using rule 10 (ClassMemberDefinition -> .)
    ID              shift and go to state 9
    PUBLIC          shift and go to state 15
    PRIVATE         shift and go to state 16

    ConstructorDeclaration         shift and go to state 13
    ClassMemberDefinition          shift and go to state 23
    MethodDeclaration              shift and go to state 11
    DataMemberDeclaration          shift and go to state 12
    Modifier                       shift and go to state 14

state 14

    (55) MethodDeclaration -> Modifier . Type LSQUARE RSQUARE ID MethodSuffix
    (56) MethodDeclaration -> Modifier . Type ID MethodSuffix
    (18) DataMemberDeclaration -> Modifier . VariableDeclaration
    (78) Type -> . VOID
    (79) Type -> . INT
    (80) Type -> . CHAR
    (81) Type -> . BOOL
    (82) Type -> . STRING
    (83) Type -> . ID
    (84) VariableDeclaration -> . Type ID SEMICOLON
    (85) VariableDeclaration -> . Type ID Initializer SEMICOLON
    (86) VariableDeclaration -> . Type LSQUARE RSQUARE ID SEMICOLON
    (87) VariableDeclaration -> . Type LSQUARE RSQUARE ID Initializer SEMICOLON

    VOID            shift and go to state 27
    INT             shift and go to state 28
    CHAR            shift and go to state 29
    BOOL            shift and go to state 30
    STRING          shift and go to state 31
    ID              shift and go to state 25

    Type                           shift and go to state 24
    VariableDeclaration            shift and go to state 26

state 15

    (59) Modifier -> PUBLIC .

    VOID            reduce using rule 59 (Modifier -> PUBLIC .)
    INT             reduce using rule 59 (Modifier -> PUBLIC .)
    CHAR            reduce using rule 59 (Modifier -> PUBLIC .)
    BOOL            reduce using rule 59 (Modifier -> PUBLIC .)
    STRING          reduce using rule 59 (Modifier -> PUBLIC .)
    ID              reduce using rule 59 (Modifier -> PUBLIC .)


state 16

    (60) Modifier -> PRIVATE .

    VOID            reduce using rule 60 (Modifier -> PRIVATE .)
    INT             reduce using rule 60 (Modifier -> PRIVATE .)
    CHAR            reduce using rule 60 (Modifier -> PRIVATE .)
    BOOL            reduce using rule 60 (Modifier -> PRIVATE .)
    STRING          reduce using rule 60 (Modifier -> PRIVATE .)
    ID              reduce using rule 60 (Modifier -> PRIVATE .)


state 17

    (14) CompilationUnit -> ClassDefinition VOID KXI2023 MAIN LPAREN . RPAREN MethodBody

    RPAREN          shift and go to state 32


state 18

    (15) ConstructorDeclaration -> ID MethodSuffix .

    ID              reduce using rule 15 (ConstructorDeclaration -> ID MethodSuffix .)
    PUBLIC          reduce using rule 15 (ConstructorDeclaration -> ID MethodSuffix .)
    PRIVATE         reduce using rule 15 (ConstructorDeclaration -> ID MethodSuffix .)
    RCURLY          reduce using rule 15 (ConstructorDeclaration -> ID MethodSuffix .)


state 19

    (57) MethodSuffix -> LPAREN . ParameterList RPAREN MethodBody
    (58) MethodSuffix -> LPAREN . RPAREN MethodBody
    (65) ParameterList -> . Parameter ParameterComma
    (61) Parameter -> . Type LSQUARE RSQUARE ID
    (62) Parameter -> . Type ID
    (78) Type -> . VOID
    (79) Type -> . INT
    (80) Type -> . CHAR
    (81) Type -> . BOOL
    (82) Type -> . STRING
    (83) Type -> . ID

    RPAREN          shift and go to state 34
    VOID            shift and go to state 27
    INT             shift and go to state 28
    CHAR            shift and go to state 29
    BOOL            shift and go to state 30
    STRING          shift and go to state 31
    ID              shift and go to state 25

    ParameterList                  shift and go to state 33
    Parameter                      shift and go to state 35
    Type                           shift and go to state 36

state 20

    (9) ClassDefinition -> CLASS ID LCURLY ClassMemberDefinition RCURLY . ClassDefinition
    (8) ClassDefinition -> .
    (9) ClassDefinition -> . CLASS ID LCURLY ClassMemberDefinition RCURLY ClassDefinition

    VOID            reduce using rule 8 (ClassDefinition -> .)
    CLASS           shift and go to state 3

    ClassDefinition                shift and go to state 37

state 21

    (11) ClassMemberDefinition -> MethodDeclaration ClassMemberDefinition .

    RCURLY          reduce using rule 11 (ClassMemberDefinition -> MethodDeclaration ClassMemberDefinition .)


state 22

    (12) ClassMemberDefinition -> DataMemberDeclaration ClassMemberDefinition .

    RCURLY          reduce using rule 12 (ClassMemberDefinition -> DataMemberDeclaration ClassMemberDefinition .)


state 23

    (13) ClassMemberDefinition -> ConstructorDeclaration ClassMemberDefinition .

    RCURLY          reduce using rule 13 (ClassMemberDefinition -> ConstructorDeclaration ClassMemberDefinition .)


state 24

    (55) MethodDeclaration -> Modifier Type . LSQUARE RSQUARE ID MethodSuffix
    (56) MethodDeclaration -> Modifier Type . ID MethodSuffix
    (84) VariableDeclaration -> Type . ID SEMICOLON
    (85) VariableDeclaration -> Type . ID Initializer SEMICOLON
    (86) VariableDeclaration -> Type . LSQUARE RSQUARE ID SEMICOLON
    (87) VariableDeclaration -> Type . LSQUARE RSQUARE ID Initializer SEMICOLON

    LSQUARE         shift and go to state 38
    ID              shift and go to state 39


state 25

    (83) Type -> ID .

    LSQUARE         reduce using rule 83 (Type -> ID .)
    ID              reduce using rule 83 (Type -> ID .)
    SEMICOLON       reduce using rule 83 (Type -> ID .)
    EQUAL           reduce using rule 83 (Type -> ID .)
    PLUSEQUAL       reduce using rule 83 (Type -> ID .)
    MINUSEQUAL      reduce using rule 83 (Type -> ID .)
    TIMESEQUAL      reduce using rule 83 (Type -> ID .)
    DIVIDEEQUAL     reduce using rule 83 (Type -> ID .)
    PLUS            reduce using rule 83 (Type -> ID .)
    MINUS           reduce using rule 83 (Type -> ID .)
    TIMES           reduce using rule 83 (Type -> ID .)
    DIVIDE          reduce using rule 83 (Type -> ID .)
    CEQUAL          reduce using rule 83 (Type -> ID .)
    NEQUAL          reduce using rule 83 (Type -> ID .)
    LESS            reduce using rule 83 (Type -> ID .)
    GREATER         reduce using rule 83 (Type -> ID .)
    GREATEQUAL      reduce using rule 83 (Type -> ID .)
    LESSEQUAL       reduce using rule 83 (Type -> ID .)
    AAND            reduce using rule 83 (Type -> ID .)
    OOR             reduce using rule 83 (Type -> ID .)
    PERIOD          reduce using rule 83 (Type -> ID .)
    LPAREN          reduce using rule 83 (Type -> ID .)
    RPAREN          reduce using rule 83 (Type -> ID .)
    RSQUARE         reduce using rule 83 (Type -> ID .)
    COMMA           reduce using rule 83 (Type -> ID .)


state 26

    (18) DataMemberDeclaration -> Modifier VariableDeclaration .

    ID              reduce using rule 18 (DataMemberDeclaration -> Modifier VariableDeclaration .)
    PUBLIC          reduce using rule 18 (DataMemberDeclaration -> Modifier VariableDeclaration .)
    PRIVATE         reduce using rule 18 (DataMemberDeclaration -> Modifier VariableDeclaration .)
    RCURLY          reduce using rule 18 (DataMemberDeclaration -> Modifier VariableDeclaration .)


state 27

    (78) Type -> VOID .

    LSQUARE         reduce using rule 78 (Type -> VOID .)
    ID              reduce using rule 78 (Type -> VOID .)
    SEMICOLON       reduce using rule 78 (Type -> VOID .)
    EQUAL           reduce using rule 78 (Type -> VOID .)
    PLUSEQUAL       reduce using rule 78 (Type -> VOID .)
    MINUSEQUAL      reduce using rule 78 (Type -> VOID .)
    TIMESEQUAL      reduce using rule 78 (Type -> VOID .)
    DIVIDEEQUAL     reduce using rule 78 (Type -> VOID .)
    PLUS            reduce using rule 78 (Type -> VOID .)
    MINUS           reduce using rule 78 (Type -> VOID .)
    TIMES           reduce using rule 78 (Type -> VOID .)
    DIVIDE          reduce using rule 78 (Type -> VOID .)
    CEQUAL          reduce using rule 78 (Type -> VOID .)
    NEQUAL          reduce using rule 78 (Type -> VOID .)
    LESS            reduce using rule 78 (Type -> VOID .)
    GREATER         reduce using rule 78 (Type -> VOID .)
    GREATEQUAL      reduce using rule 78 (Type -> VOID .)
    LESSEQUAL       reduce using rule 78 (Type -> VOID .)
    AAND            reduce using rule 78 (Type -> VOID .)
    OOR             reduce using rule 78 (Type -> VOID .)
    PERIOD          reduce using rule 78 (Type -> VOID .)
    LPAREN          reduce using rule 78 (Type -> VOID .)
    RPAREN          reduce using rule 78 (Type -> VOID .)
    RSQUARE         reduce using rule 78 (Type -> VOID .)
    COMMA           reduce using rule 78 (Type -> VOID .)


state 28

    (79) Type -> INT .

    LSQUARE         reduce using rule 79 (Type -> INT .)
    ID              reduce using rule 79 (Type -> INT .)
    SEMICOLON       reduce using rule 79 (Type -> INT .)
    EQUAL           reduce using rule 79 (Type -> INT .)
    PLUSEQUAL       reduce using rule 79 (Type -> INT .)
    MINUSEQUAL      reduce using rule 79 (Type -> INT .)
    TIMESEQUAL      reduce using rule 79 (Type -> INT .)
    DIVIDEEQUAL     reduce using rule 79 (Type -> INT .)
    PLUS            reduce using rule 79 (Type -> INT .)
    MINUS           reduce using rule 79 (Type -> INT .)
    TIMES           reduce using rule 79 (Type -> INT .)
    DIVIDE          reduce using rule 79 (Type -> INT .)
    CEQUAL          reduce using rule 79 (Type -> INT .)
    NEQUAL          reduce using rule 79 (Type -> INT .)
    LESS            reduce using rule 79 (Type -> INT .)
    GREATER         reduce using rule 79 (Type -> INT .)
    GREATEQUAL      reduce using rule 79 (Type -> INT .)
    LESSEQUAL       reduce using rule 79 (Type -> INT .)
    AAND            reduce using rule 79 (Type -> INT .)
    OOR             reduce using rule 79 (Type -> INT .)
    PERIOD          reduce using rule 79 (Type -> INT .)
    LPAREN          reduce using rule 79 (Type -> INT .)
    RPAREN          reduce using rule 79 (Type -> INT .)
    RSQUARE         reduce using rule 79 (Type -> INT .)
    COMMA           reduce using rule 79 (Type -> INT .)


state 29

    (80) Type -> CHAR .

    LSQUARE         reduce using rule 80 (Type -> CHAR .)
    ID              reduce using rule 80 (Type -> CHAR .)
    SEMICOLON       reduce using rule 80 (Type -> CHAR .)
    EQUAL           reduce using rule 80 (Type -> CHAR .)
    PLUSEQUAL       reduce using rule 80 (Type -> CHAR .)
    MINUSEQUAL      reduce using rule 80 (Type -> CHAR .)
    TIMESEQUAL      reduce using rule 80 (Type -> CHAR .)
    DIVIDEEQUAL     reduce using rule 80 (Type -> CHAR .)
    PLUS            reduce using rule 80 (Type -> CHAR .)
    MINUS           reduce using rule 80 (Type -> CHAR .)
    TIMES           reduce using rule 80 (Type -> CHAR .)
    DIVIDE          reduce using rule 80 (Type -> CHAR .)
    CEQUAL          reduce using rule 80 (Type -> CHAR .)
    NEQUAL          reduce using rule 80 (Type -> CHAR .)
    LESS            reduce using rule 80 (Type -> CHAR .)
    GREATER         reduce using rule 80 (Type -> CHAR .)
    GREATEQUAL      reduce using rule 80 (Type -> CHAR .)
    LESSEQUAL       reduce using rule 80 (Type -> CHAR .)
    AAND            reduce using rule 80 (Type -> CHAR .)
    OOR             reduce using rule 80 (Type -> CHAR .)
    PERIOD          reduce using rule 80 (Type -> CHAR .)
    LPAREN          reduce using rule 80 (Type -> CHAR .)
    RPAREN          reduce using rule 80 (Type -> CHAR .)
    RSQUARE         reduce using rule 80 (Type -> CHAR .)
    COMMA           reduce using rule 80 (Type -> CHAR .)


state 30

    (81) Type -> BOOL .

    LSQUARE         reduce using rule 81 (Type -> BOOL .)
    ID              reduce using rule 81 (Type -> BOOL .)
    SEMICOLON       reduce using rule 81 (Type -> BOOL .)
    EQUAL           reduce using rule 81 (Type -> BOOL .)
    PLUSEQUAL       reduce using rule 81 (Type -> BOOL .)
    MINUSEQUAL      reduce using rule 81 (Type -> BOOL .)
    TIMESEQUAL      reduce using rule 81 (Type -> BOOL .)
    DIVIDEEQUAL     reduce using rule 81 (Type -> BOOL .)
    PLUS            reduce using rule 81 (Type -> BOOL .)
    MINUS           reduce using rule 81 (Type -> BOOL .)
    TIMES           reduce using rule 81 (Type -> BOOL .)
    DIVIDE          reduce using rule 81 (Type -> BOOL .)
    CEQUAL          reduce using rule 81 (Type -> BOOL .)
    NEQUAL          reduce using rule 81 (Type -> BOOL .)
    LESS            reduce using rule 81 (Type -> BOOL .)
    GREATER         reduce using rule 81 (Type -> BOOL .)
    GREATEQUAL      reduce using rule 81 (Type -> BOOL .)
    LESSEQUAL       reduce using rule 81 (Type -> BOOL .)
    AAND            reduce using rule 81 (Type -> BOOL .)
    OOR             reduce using rule 81 (Type -> BOOL .)
    PERIOD          reduce using rule 81 (Type -> BOOL .)
    LPAREN          reduce using rule 81 (Type -> BOOL .)
    RPAREN          reduce using rule 81 (Type -> BOOL .)
    RSQUARE         reduce using rule 81 (Type -> BOOL .)
    COMMA           reduce using rule 81 (Type -> BOOL .)


state 31

    (82) Type -> STRING .

    LSQUARE         reduce using rule 82 (Type -> STRING .)
    ID              reduce using rule 82 (Type -> STRING .)
    SEMICOLON       reduce using rule 82 (Type -> STRING .)
    EQUAL           reduce using rule 82 (Type -> STRING .)
    PLUSEQUAL       reduce using rule 82 (Type -> STRING .)
    MINUSEQUAL      reduce using rule 82 (Type -> STRING .)
    TIMESEQUAL      reduce using rule 82 (Type -> STRING .)
    DIVIDEEQUAL     reduce using rule 82 (Type -> STRING .)
    PLUS            reduce using rule 82 (Type -> STRING .)
    MINUS           reduce using rule 82 (Type -> STRING .)
    TIMES           reduce using rule 82 (Type -> STRING .)
    DIVIDE          reduce using rule 82 (Type -> STRING .)
    CEQUAL          reduce using rule 82 (Type -> STRING .)
    NEQUAL          reduce using rule 82 (Type -> STRING .)
    LESS            reduce using rule 82 (Type -> STRING .)
    GREATER         reduce using rule 82 (Type -> STRING .)
    GREATEQUAL      reduce using rule 82 (Type -> STRING .)
    LESSEQUAL       reduce using rule 82 (Type -> STRING .)
    AAND            reduce using rule 82 (Type -> STRING .)
    OOR             reduce using rule 82 (Type -> STRING .)
    PERIOD          reduce using rule 82 (Type -> STRING .)
    LPAREN          reduce using rule 82 (Type -> STRING .)
    RPAREN          reduce using rule 82 (Type -> STRING .)
    RSQUARE         reduce using rule 82 (Type -> STRING .)
    COMMA           reduce using rule 82 (Type -> STRING .)


state 32

    (14) CompilationUnit -> ClassDefinition VOID KXI2023 MAIN LPAREN RPAREN . MethodBody
    (54) MethodBody -> . LCURLY Statement RCURLY

    LCURLY          shift and go to state 41

    MethodBody                     shift and go to state 40

state 33

    (57) MethodSuffix -> LPAREN ParameterList . RPAREN MethodBody

    RPAREN          shift and go to state 42


state 34

    (58) MethodSuffix -> LPAREN RPAREN . MethodBody
    (54) MethodBody -> . LCURLY Statement RCURLY

    LCURLY          shift and go to state 41

    MethodBody                     shift and go to state 43

state 35

    (65) ParameterList -> Parameter . ParameterComma
    (63) ParameterComma -> .
    (64) ParameterComma -> . COMMA Parameter ParameterComma

    RPAREN          reduce using rule 63 (ParameterComma -> .)
    COMMA           shift and go to state 45

    ParameterComma                 shift and go to state 44

state 36

    (61) Parameter -> Type . LSQUARE RSQUARE ID
    (62) Parameter -> Type . ID

    LSQUARE         shift and go to state 46
    ID              shift and go to state 47


state 37

    (9) ClassDefinition -> CLASS ID LCURLY ClassMemberDefinition RCURLY ClassDefinition .

    VOID            reduce using rule 9 (ClassDefinition -> CLASS ID LCURLY ClassMemberDefinition RCURLY ClassDefinition .)


state 38

    (55) MethodDeclaration -> Modifier Type LSQUARE . RSQUARE ID MethodSuffix
    (86) VariableDeclaration -> Type LSQUARE . RSQUARE ID SEMICOLON
    (87) VariableDeclaration -> Type LSQUARE . RSQUARE ID Initializer SEMICOLON

    RSQUARE         shift and go to state 48


state 39

    (56) MethodDeclaration -> Modifier Type ID . MethodSuffix
    (84) VariableDeclaration -> Type ID . SEMICOLON
    (85) VariableDeclaration -> Type ID . Initializer SEMICOLON
    (57) MethodSuffix -> . LPAREN ParameterList RPAREN MethodBody
    (58) MethodSuffix -> . LPAREN RPAREN MethodBody
    (53) Initializer -> . EQUAL Expression

    SEMICOLON       shift and go to state 50
    LPAREN          shift and go to state 19
    EQUAL           shift and go to state 52

    MethodSuffix                   shift and go to state 49
    Initializer                    shift and go to state 51

state 40

    (14) CompilationUnit -> ClassDefinition VOID KXI2023 MAIN LPAREN RPAREN MethodBody .

    $end            reduce using rule 14 (CompilationUnit -> ClassDefinition VOID KXI2023 MAIN LPAREN RPAREN MethodBody .)


state 41
